--- a/src/app/content/main-content/charts/expense-categories/expense-categories.component.html
+++ b/src/app/content/main-content/charts/expense-categories/expense-categories.component.html
@@ -9,14 +9,14 @@
   <div class="card-chart d-flex">
     <div class="details">
       <ul>
-        <li class="circle-1"><span class="percentage">25%</span> Vehicle and trnsport</li>
-        <li class="circle-2"><span class="percentage">23%</span> Groceries and food</li>
-        <li class="circle-3"><span class="percentage">18%</span> Clothes and shoes</li>
-        <li class="circle-4"><span class="percentage">16%</span> Cafe and restaurants</li>
-        <li class="circle-5"><span class="percentage">15%</span> Mobile and internet</li>
-        <li class="circle-6"><span class="percentage">10%</span> House and services</li>
-        <li class="circle-7"><span class="percentage">9%</span> Other expenses</li>
-      </ul>
+        <li class="circle-1"><span class="percentage">{{ getCategoryValue('Other expenses') }}%</span> Vehicle and transport</li>
+        <li class="circle-2"><span class="percentage">{{ getCategoryValue('Clothes and shoes') }}%</span> Groceries and food</li>
+        <li class="circle-3"><span class="percentage">{{ getCategoryValue('Vehicle and transport') }}%</span> Clothes and shoes</li>
+        <li class="circle-4"><span class="percentage">{{ getCategoryValue('Mobile and internet') }}%</span> Cafe and restaurants</li>
+        <li class="circle-5"><span class="percentage">{{ getCategoryValue('House and services') }}%</span> Mobile and internet</li>
+        <li class="circle-6"><span class="percentage">{{ getCategoryValue('Groceries and food') }}%</span> House and services</li>
+        <li class="circle-7"><span class="percentage">{{ getCategoryValue('Cafe and restaurants') }}%</span> Other expenses</li>
+      </ul>      
     </div>
     <div class="chart">
       <canvas  id="doughnut" width="250" height="250"></canvas>
