--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<top-menu></top-menu>
-<main-content></main-content>
+<nav>
+  <a routerLink="/login">Login</a>
+  <br>
+  <a routerLink="/support">Support</a>
+</nav>
+
+<router-outlet></router-outlet>
