--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,11 @@
-<div>
-  <h2>Login</h2>
-  <!-- Додайте форму для введення даних автентифікації -->
-</div>
+<form (submit)="onSubmit($event, email.value, password.value)">
+  <div class="form-group">
+    <label for="email">Email:</label>
+    <input type="email" class="form-control" id="email" placeholder="Enter email" required #email>
+  </div>
+  <div class="form-group">
+    <label for="password">Password:</label>
+    <input type="password" class="form-control" id="password" placeholder="Password" required #password>
+  </div>
+  <button type="submit" class="btn btn-primary">Login</button>
+</form>
